shalinee | responsive button overlapping issue and vendor page issue fixed

--- a/apps/web-giddh/src/assets/css/style-2.scss
+++ b/apps/web-giddh/src/assets/css/style-2.scss
@@ -11329,11 +11329,18 @@ body.prevent-body-scroll {
         display: none!important;
     }
 }
-@media(max-height:800px){
+/*media query for height resolution*/
+@media(max-height:999px){
     .contact-main {
         min-height: 340px;
     }
 }
+@media(min-height:300px) and (max-height:730px){
+   .linked-address sh-select-menu .total-padding {
+        height: 257px !important;
+    }
+}
+
 .modal.fade.giddh-calendar.show {
     z-index: 999999;
 }
